Add printerLocations property to library api model
