# go-server/api/oas_validators_gen.go
@@ -872,6 +872,17 @@ func (s *Library) Validate() error {
 			Error: err,
 		})
 	}
+	if err := func() error {
+		if s.PrinterLocations == nil {
+			return errors.New("nil is invalid value")
+		}
+		return nil
+	}(); err != nil {
+		failures = append(failures, validate.FieldError{
+			Name:  "printerLocations",
+			Error: err,
+		})
+	}
 	if len(failures) > 0 {
 		return &validate.Error{Fields: failures}
 	}
